# orchesis

./: .dockerignore  .env.example  .gitignore  .tmp_pytest_after.txt  .tmp_pytest_before.txt  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PRIVACY.md  QUICK_START.md  README-PYPI.md  README.md  README_OLD.md  SECURITY.md  _mcp_count_tmp.py  console_output.txt  decisions.jsonl  docker-compose.yml  impressions.md  orchesis-report.sarif  orchesis-report.txt  orchesis.yaml  policy.yaml  privacy-policy.md  pyproject.toml  pytest-report.json  request.json  run_agent_demo.py  run_e2e_demo.py  run_mcp_demo.py  t_all_doc_files_exist() - None  terms.md  test_report.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  bypass_report.md  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  lint.yml  nightly-fuzz.yml  orchesis-scan-action-test.yml  orchesis-scan-example.yml  publish.yml  test.yml
.hypothesis/constants/: 00f2aa9412216fdd  014a05d8f54615ae  03fe6d7ed8b4fb67  04bfd4630fde9141  054b7d0216527436  063142d737b35a5d  0a567950332ac7ac  0af711a1b42f14bf  0b536e70e8368c6c  0f959020d9877183  108391c21064ddc8  11001a7d62616c04  12142306caa91be1  131ee45b8de5f771  135c2af5cdab467e  139437395ce5bd15  1519749e17cf8c41  16b92fac54d3feed  16d7326ad4d8f074  17863447c57a27cf  187c0c93b9edf0cb  1d0b5849ab301864  1e02e6729eb931e2  1e0713a7345e8149  1e2391a549da0f67  1e5ad4fcfd642fd4  1fe6877259c0e4ef  21c719b356279da3  222bf73a9d8b325e  228acf56508176b3  22f1984d3d1cec1b  236ba0ab5dee1bf6  252b720bded5034f  25b814878bcab151  279d9c7065880f02  27ad5e871b09cb71  290ad69dc031945c  2969ea539bf4694c  2a0ce4a1812d5a99  2b5acb0a7ee82757  (+176 more)
.hypothesis/tmp/: tmp0h_3vti1  tmp0zo49f3d  tmp14_7l3rg  tmp18042sau  tmp28bx6swd  tmp2lnb4_0b  tmp34_8u480  tmp3kbm57af  tmp42tvlxyv  tmp48oh_rtf  tmp49qv73dc  tmp5lkfg81a  tmp7mzm0h1p  tmp83l3htvr  tmp8kvzrgq0  tmp8lick348  tmp8wp8s42_  tmp9q4idhrp  tmp_7khjjj8  tmpa7mexue4  tmpajqen9t3  tmpby8mg0kf  tmpc6inj31l  tmpcu95duut  tmpd6qhn1h_  tmpd7gpnepn  tmpdjflth3_  tmpdkx5s9bn  tmpdm9xazzn  tmpef8p2qhf  tmpeg6rvbv1  tmpfdikgvg5  tmpfmrwtoyb  tmpfqxwz4h_  tmpg2_y4vc7  tmpginp__9j  tmpgt3k05kt  tmpgz4adk4c  tmpgzo4cnwq  tmph0ih5pvu  (+41 more)
.orchesis/: credentials.yaml  credentials_env.json  decisions.jsonl  e2e_demo_policy.yaml  fuzz_meta.json  fuzz_runs.jsonl  incidents.jsonl  mutation_runs.jsonl  policy_versions.jsonl  state.jsonl  traces.jsonl
.orchesis/keys/: private.pem  public.pem
config/: orchesis.yaml  orchesis_example.yaml  orchesis_openclaw.yaml
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  easter-eggs.js  styles.css  themes.js
demo/: try_orchesis.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIG.md  DASHBOARD.md  DEPLOYMENT.md  PHASE0.md  PIPELINE.md  POLICY_REFERENCE.md  QUICKSTART.md  RELEASE_NOTES_v0.5.0.md  SECURITY.md  THREAT_MODEL.md  TRUST_TIERS.md  configuration.md  index.html  scanner-engine.js
docs/guides/: openclaw.md
examples/: agent_tasks.yaml  cursor_mcp_config.json  demo_mcp_server.py  permissive-policy.yaml  policy.yaml  production_policy.yaml  run_demo.py  run_e2e_demo.py  strict-policy.yaml
examples/integration/: basic_usage.py  crewai_guard.py  fastapi_middleware.py  langchain_tool_guard.py  mcp_middleware.py
experiments/: mve_context_dedup.py
experiments/results/: exp5_8_10_summary.json  mve_001_20260315.json
fuzzing/: README.md  fuzz_compliance.py  fuzz_http_proxy.py  fuzz_mcp_jsonrpc.py  fuzz_pii_detector.py  fuzz_policy_yaml.py  fuzz_secret_scanner.py
fuzzing/dictionaries/: http.dict  jsonrpc.dict  yaml.dict
github-action/: Dockerfile  README.md  action.yml  entrypoint.sh
github-action/examples/: basic.yml  pr-check.yml  scheduled-audit.yml
integrations/github-action/: README.md  action.yml
integrations/npm-cli/: README.md  index.js  package.json
integrations/openclaw/: README.md  SKILL.md  example_policy.yaml
integrations/pre-commit/: .pre-commit-hooks.yaml  README.md  orchesis_pre_commit.py  setup.cfg
integrations/radar/: README.md  index.js  package.json  radar.html
mcp-server/: README.md  orchesis_mcp_server.py  pyproject.toml
mcp-server/tests/: test_mcp_server.py
npm/orchesis-context/: README.md  index.js  package.json
red-team/: README.md  config.py  report_generator.py  run_all.py
red-team/attacks/: init.py
red-team/policies/: edge_case_policy.yaml  permissive_policy.yaml  strict_policy.yaml
red-team/results/: report.json  report.md
research/mcp-scan/: README.md  aggregate_stats.py  analyze_configs.py  scan_github.py
scanner-site/: index.html
scanner-site/test-configs/: moderate.json  real-world-examples.json  secure.json  vulnerable.json
scripts/: check_forbidden_terms.py  nightly_fuzz.bat  red_team_v4.py  test_openclaw_integration.py
stress-test/: README.md  analyze_results.py  llm_runtime.py  orchesis_guard.py  requirements.txt  run_all.ps1  run_all.py  run_all.sh
tests/: ci_multiplier.py  cli_test_utils.py  conftest.py  test_aabb_api.py  test_aabb_benchmark.py  test_adaptive_detection_v2.py  test_adaptive_detector.py  test_adaptive_threshold.py  test_advanced_rules.py  test_adversarial.py  test_adversarial_tracker.py  test_agent_autopsy.py  test_agent_compare.py  test_agent_discovery.py  test_agent_graph.py  test_agent_harness.py  test_agent_health.py  test_agent_isolation.py  test_agent_lifecycle.py  test_agent_profile.py  test_agent_report_card.py  test_agent_scorecard.py  test_ahocorasick.py  test_air_export.py  test_alert_rules.py  test_alerting.py  test_anomaly_alerts.py  test_anomaly_predictor.py  test_anthropic_compat.py  test_anti_collusion.py  test_api.py  test_api_completeness.py  test_api_contracts.py  test_api_enhanced.py  test_api_rate_limiter.py  test_apoptosis.py  test_approval_queue.py  test_arc_readiness.py  test_are_api.py  test_are_framework.py  (+366 more)
tests_live/: test_01_basic.py  test_02_load.py  test_03_cache.py  test_04_threats.py  test_05_loops.py  test_06_flow.py  test_07_sdk.py  test_08_ab.py
(+602 files in other folders)
