[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "orchesis"
version = "0.1.0"
description = "AI Agent Control Plane — transparent HTTP proxy for security, cost optimization, and reliability"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Pavel", email = "contact@orchesis.io"}]
keywords = [
    "ai",
    "agents",
    "security",
    "proxy",
    "llm",
    "openai",
    "anthropic",
    "mcp",
    "ai-security",
    "llm-proxy",
    "agent-security",
    "prompt-injection",
    "cost-optimization",
    "openai-proxy",
    "anthropic-proxy",
    "ai-agent",
    "mcp-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
integrations = ["httpx>=0.24.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "build",
    "twine",
    "pytest-cov",
]

[project.urls]
Homepage = "https://orchesis.io"
Repository = "https://github.com/poushwell/orchesis"
Issues = "https://github.com/poushwell/orchesis/issues"

[project.scripts]
orchesis = "orchesis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orchesis = ["*.html", "*.yaml", "*.json", "marketplace/packs/*.yaml", "yara_rules/*.yar"]
"*" = ["dashboard/dist/**/*", "dashboard/dist/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F401", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
