[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "orchesis"
version = "0.5.0"
description = "Runtime Gateway for AI Agents. 17-phase security pipeline."
readme = "README-PYPI.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Pavel", email = "contact@orchesis.io"}]
keywords = [
    "ai",
    "agents",
    "security",
    "proxy",
    "llm",
    "openai",
    "anthropic",
    "mcp",
    "ai-security",
    "llm-proxy",
    "agent-security",
    "prompt-injection",
    "cost-optimization",
    "openai-proxy",
    "anthropic-proxy",
    "ai-agent",
    "mcp-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
integrations = ["httpx>=0.24.0"]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]
all = [
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "build",
    "twine",
    "pytest-cov",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://orchesis.ai"
Repository = "https://github.com/poushwell/orchesis"
Documentation = "https://github.com/poushwell/orchesis/blob/main/QUICK_START.md"
"Bug Tracker" = "https://github.com/poushwell/orchesis/issues"
"MCP Scanner" = "https://orchesis.ai/scan"

[project.scripts]
orchesis = "orchesis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"orchesis" = ["dashboard_dist/**/*", "dashboard_dist/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F401", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "examples"]
