[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "orchesis"
version = "0.5.0"
description = "Runtime Gateway for AI Agents — block threats, cut waste, monitor fleet"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Orchesis Contributors"}]
keywords = [
    "ai",
    "agents",
    "security",
    "proxy",
    "llm",
    "mcp",
    "openai",
    "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
integrations = ["httpx>=0.24.0"]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]
all = [
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "build",
    "twine",
    "pytest-cov",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://orchesis.io"
Documentation = "https://github.com/poushwell/orchesis/blob/main/QUICK_START.md"
Repository = "https://github.com/poushwell/orchesis"
Issues = "https://github.com/poushwell/orchesis/issues"
Changelog = "https://github.com/poushwell/orchesis/blob/main/CHANGELOG.md"
"MCP Scanner" = "https://orchesis.ai/scan"

[project.scripts]
orchesis = "orchesis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"orchesis" = ["py.typed", "dashboard_dist/**/*", "dashboard_dist/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F401", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "examples"]
