[project]
name = "orchesis-mcp-server"
version = "0.1.0"
description = "Security scanner MCP server for AI agent configurations - powered by Orchesis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
orchesis-mcp-server = "orchesis_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["orchesis_mcp_server.py"]
